# fundskit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.crates.md  README.md  audit.toml  deny.toml
.github/workflows/: backfill.yml  nightly.yml  release.yml
cli/: Cargo.toml
cli/src/: daily.rs  ingest.rs  main.rs
crates/fundskit/: Cargo.toml
crates/fundskit/src/: client.rs  error.rs  fetcher.rs  lib.rs  parquet_io.rs  record.rs
crates/fundskit/tests/: client.rs
data/: manifest.json
data/period=2006Q4/: fund13f-2006Q4.parquet
data/period=2007Q1/: fund13f-2007Q1.parquet
data/period=2007Q2/: fund13f-2007Q2.parquet
data/period=2007Q3/: fund13f-2007Q3.parquet
data/period=2007Q4/: fund13f-2007Q4.parquet
data/period=2008Q1/: fund13f-2008Q1.parquet
data/period=2008Q2/: fund13f-2008Q2.parquet
data/period=2008Q3/: fund13f-2008Q3.parquet
data/period=2008Q4/: fund13f-2008Q4.parquet
data/period=2009Q1/: fund13f-2009Q1.parquet
data/period=2009Q2/: fund13f-2009Q2.parquet
data/period=2009Q3/: fund13f-2009Q3.parquet
data/period=2009Q4/: fund13f-2009Q4.parquet
data/period=2010Q1/: fund13f-2010Q1.parquet
data/period=2010Q2/: fund13f-2010Q2.parquet
data/period=2010Q3/: fund13f-2010Q3.parquet
data/period=2010Q4/: fund13f-2010Q4.parquet
data/period=2011Q1/: fund13f-2011Q1.parquet
data/period=2011Q2/: fund13f-2011Q2.parquet
data/period=2011Q3/: fund13f-2011Q3.parquet
data/period=2011Q4/: fund13f-2011Q4.parquet
data/period=2012Q1/: fund13f-2012Q1.parquet
data/period=2012Q2/: fund13f-2012Q2.parquet
data/period=2012Q3/: fund13f-2012Q3.parquet
(+46 files in other folders)
