[package]
name = "fundskit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fundskit-cli"
path = "src/main.rs"

[dependencies]
fundskit = { path = "../crates/fundskit", version = "0.1.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
quick-xml = { version = "0.40", features = ["serialize"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
