[package]
name = "fundskit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "SEC Form 13F institutional holdings for Rust, from SEC EDGAR public-domain data sets."
readme = "../../README.crates.md"
exclude = [
    "/data",
    "/docs",
    "/.github",
    "/cli",
    "CONTRIBUTING.md",
]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
directories = "5"

[dev-dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }
tempfile = "3"
wiremock = "0.6"
